2003-11-27  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.c (cm_listoffloats): made the layout in Info output
	the same with indices.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.c (cm_listoffloats): generate a menu for Info, with
	automatically shortened captions.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_acronym): use acronym element for HTML.
	Report from: Torsten Bronger <bronger@physik.rwth-aachen.de>
	Tue, 25 Nov 2003 10:30:52 +0100.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (cm_appendix): reset numbers only when
	changing enum_marker.

2003-11-25  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/index.c (cm_printindex): made Appendix matching locale
	aware.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/index.c (cm_printindex): also catch Appendix and A.1 kind
	of numbers with --no-headers Info output.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (cm_example):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_begin_multitable):
	moved common floatenv handling to ...
	(xml_begin_docbook_float): here.

	* makeinfo/insertion.c (end_insertion, cm_smallexample, cm_lisp)
	(cm_smalllisp): insert FLOATEXAMPLE for Docbook if inside @float.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (is_in_insertion_of_type): don't return the
	level, as it is not useful.
	(begin_insertion): instead of is_in_insertion_of_type, use
	float_active.

	* makeinfo/insertion.c (cm_example):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_begin_multitable):
	insert empty label for @floats with no @anchor.

2003-11-24  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (EXTRA_DIST): remove no-longer-defined
	noinst_SCRIPTS.

2003-11-24  Akim Demaille  <akim@epita.fr>

	* configure.ac (HELP2MAN): Look for it.
	* doc/help2man: Remove.
	* doc/Makefile.am (HELP2MAN, noinst_SCRIPT): Remove.
	(common_mandeps): Don't depend on HELP2MAN which can be a complex
	command such as "missing --run help2man.
